--- a/src/GIMI-ModManager.WinUI/Views/DebugPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/DebugPage.xaml
@@ -15,5 +15,6 @@
 
     <StackPanel>
         <Button Content="Run Command" Click="ButtonBase_OnClick"></Button>
+        <Button Content="OpenDialog" Click="ButtonBase_OnClickOpenDialog"></Button>
     </StackPanel>
 </Page>
