--- a/src/GIMI-ModManager.WinUI/Views/CommandProcessViewer.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CommandProcessViewer.xaml
@@ -16,20 +16,51 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Style="{ThemeResource SubtitleTextBlockStyle}">
-            <Run Text="Running: " />
-            <Run Text="{x:Bind ViewModel.CommandDisplayName, Mode=OneWay}" />
-        </TextBlock>
+
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Style="{ThemeResource SubtitleTextBlockStyle}">
+                <Run Text="Running: " />
+                <Run Text="{x:Bind ViewModel.CommandDisplayName, Mode=OneWay}" />
+            </TextBlock>
+
+            <CheckBox
+                Grid.Column="1"
+                HorizontalAlignment="Right"
+                Content="Auto scroll"
+                IsChecked="{x:Bind ViewModel.IsAutoScroll, Mode=TwoWay}" />
+
+        </Grid>
+
 
         <ScrollViewer
+            x:Name="OutputScrollViewer"
             Grid.Row="1"
             Background="{ThemeResource CardBackgroundFillColorSecondaryBrush}"
             VerticalScrollBarVisibility="Visible"
             VerticalScrollMode="Enabled">
-            <TextBlock x:Name="OutputTextBlock" IsTextSelectionEnabled="True" />
+            <TextBlock
+                x:Name="OutputTextBlock"
+                IsTextSelectionEnabled="True"
+                KeyDown="OutputTextBlock_OnKeyDown" />
         </ScrollViewer>
+        <ProgressBar
+            Grid.Row="1"
+            Margin="0,5,0,0"
+            VerticalAlignment="Bottom"
+            IsIndeterminate="{x:Bind ViewModel.IsRunning, Mode=OneWay}" />
+
+
+        <Grid Grid.Row="2">
+            <Button Command="{x:Bind ViewModel.KillProcessCommand}" Content="Kill process" />
+        </Grid>
 
     </Grid>
 </UserControl>
