--- a/src/GIMI-ModManager.WinUI/Views/Controls/FolderSelector.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/Controls/FolderSelector.xaml
@@ -15,12 +15,14 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid>
             <TextBlock
                 Grid.Column="0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
+                IsTextSelectionEnabled="True"
                 Style="{ThemeResource BodyStrongTextBlockStyle}"
                 Text="{x:Bind Title}" />
         </Grid>
@@ -34,8 +36,9 @@
                 x:Name="SelectedFolderTextBox"
                 Grid.Column="0"
                 VerticalAlignment="Center"
-                Text="{x:Bind SelectedFolderValue, Mode=TwoWay}"
-                TextChanged="SelectedFolderTextBox_TextChanged" />
+                PlaceholderText="{x:Bind PlaceHolderText, Mode=TwoWay}"
+                TextChanged="SelectedFolderTextBox_TextChanged"
+                Text="{x:Bind SelectedFolderValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <Button
                 Grid.Column="1"
                 Margin="5,0,0,0"
@@ -44,7 +47,18 @@
                 Content="Browse" />
         </Grid>
 
-        <Grid Grid.Row="2">
+        <Grid
+            x:Name="FooterWrapper"
+            Grid.Row="2"
+            Margin="0,5,0,0"
+            Visibility="Collapsed">
+            <TextBlock
+                HorizontalAlignment="Left"
+                IsTextSelectionEnabled="True"
+                Text="{x:Bind Footer, Mode=TwoWay}" />
+        </Grid>
+
+        <Grid Grid.Row="3">
             <ListView
                 Margin="5,5,5,5"
                 IsItemClickEnabled="False"
