--- a/src/GIMI-ModManager.WinUI/Views/ModsOverviewPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/ModsOverviewPage.xaml
@@ -14,9 +14,113 @@
 
     <Page.Resources>
 
+        <Flyout
+            x:Key="CommandMenuFlyout"
+            Opening="CommandMenuFlyout_OnOpening"
+            Placement="BottomEdgeAlignedLeft"
+            ShouldConstrainToRootBounds="False">
+            <Grid MaxWidth="400" RowSpacing="4">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        Text="Run Command on this folder:" />
+                    <Button
+                        Grid.Column="1"
+                        HorizontalAlignment="Right"
+                        Command="{x:Bind ViewModel.OpenFolderCommand}"
+                        ToolTipService.ToolTip="Open Folder">
+                        <FontIcon Glyph="&#xE838;" />
+                    </Button>
+
+                </Grid>
+                <ListView
+                    Grid.Row="1"
+                    ItemsSource="{x:Bind ViewModel.CommandDefinitions}"
+                    SelectionMode="None">
+                    <ListView.ItemTemplate>
+
+                        <DataTemplate x:DataType="viewModels:ModOverviewCommandVM">
+                            <Grid
+                                Padding="4"
+                                Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                                ColumnSpacing="4"
+                                CornerRadius="4">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="Auto" />
+                                </Grid.ColumnDefinitions>
+                                <StackPanel Spacing="4">
+                                    <TextBlock
+                                        TextTrimming="CharacterEllipsis"
+                                        ToolTipService.ToolTip="{x:Bind DisplayName}"
+                                        Text="{x:Bind DisplayName}" />
+
+
+                                    <StackPanel>
+                                        <TextBlock IsTextSelectionEnabled="True" Text="Full Command:" />
+                                        <TextBlock
+                                            Padding="6,0,0,0"
+                                            IsTextSelectionEnabled="True"
+                                            TextTrimming="CharacterEllipsis"
+                                            ToolTipService.ToolTip="{x:Bind FullCommand}"
+                                            Text="{x:Bind FullCommand}" />
+                                    </StackPanel>
+
+                                    <StackPanel>
+                                        <TextBlock IsTextSelectionEnabled="True" Text="Working Directory:" />
+                                        <TextBlock
+                                            Padding="6,0,0,0"
+                                            IsTextSelectionEnabled="True"
+                                            TextTrimming="CharacterEllipsis"
+                                            ToolTipService.ToolTip="{x:Bind WorkingDirectory}"
+                                            Text="{x:Bind WorkingDirectory}" />
+                                    </StackPanel>
+
+                                    <StackPanel>
+                                        <TextBlock IsTextSelectionEnabled="True" Text="'{{TargetPath}}:" />
+                                        <TextBlock
+                                            Padding="6,0,0,0"
+                                            IsTextSelectionEnabled="True"
+                                            Tag="TargetPathText"
+                                            TextTrimming="CharacterEllipsis"
+                                            ToolTipService.ToolTip="{x:Bind TargetPath, Mode=OneWay}"
+                                            Text="{x:Bind TargetPath, Mode=OneWay}" />
+                                    </StackPanel>
+
+
+                                </StackPanel>
+
+                                <Button
+                                    Grid.Column="1"
+                                    VerticalAlignment="Center"
+                                    Command="{x:Bind RunCommand}"
+                                    CommandParameter="{x:Bind}"
+                                    Content="Run"
+                                    Style="{ThemeResource AccentButtonStyle}" />
+                            </Grid>
+
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
+
+        </Flyout>
+
 
         <DataTemplate x:Key="CategoryTemplate" x:DataType="viewModels:CategoryNode">
-            <TreeViewItem IsExpanded="False" ItemsSource="{x:Bind ModdableObjects}">
+            <TreeViewItem
+                ContextFlyout="{StaticResource CommandMenuFlyout}"
+                IsExpanded="False"
+                ItemsSource="{x:Bind ModdableObjects}">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Margin="0,0,10,0" />
                     <TextBlock Text="{x:Bind DisplayName}" />
@@ -26,7 +130,10 @@
 
 
         <DataTemplate x:Key="CharacterTemplate" x:DataType="viewModels:ModdableObjectNode">
-            <TreeViewItem IsExpanded="False" ItemsSource="{x:Bind Mods}">
+            <TreeViewItem
+                ContextFlyout="{StaticResource CommandMenuFlyout}"
+                IsExpanded="False"
+                ItemsSource="{x:Bind Mods}">
 
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -55,7 +162,7 @@
         </DataTemplate>
 
         <DataTemplate x:Key="ModTemplate" x:DataType="models:ModModel">
-            <TreeViewItem>
+            <TreeViewItem ContextFlyout="{StaticResource CommandMenuFlyout}">
                 <Grid>
 
                     <Grid.ColumnDefinitions>
@@ -69,8 +176,8 @@
                     <controls:LinkButton
                         Grid.Column="1"
                         Link="{x:Bind FolderPath}"
-                        Text="{x:Bind FolderName}"
-                        ToolTipService.ToolTip="Open skin folder" />
+                        ToolTipService.ToolTip="Open skin folder"
+                        Text="{x:Bind FolderName}" />
 
                     <StackPanel Grid.Column="2" Orientation="Horizontal">
                         <TextBlock Margin="0,0,4,0" Text="Added:" />
